Switch to JDK 11